--- a/content/publication/ewerz-2024-ai/cite.bib
+++ b/content/publication/ewerz-2024-ai/cite.bib
@@ -1,7 +1,7 @@
-@article{peintner2024efficient,
-  title={Efficient Session-based Recommendation with Contrastive Graph-based Shortest Path Search},
-  author={Peintner, Andreas and Mohammadi, Amir Reza and Zangerle, Eva},
-  journal={ACM Transactions on Recommender Systems},
-  year={2024},
-  publisher={ACM New York, NY}
+@article{ewerz2024unternehmensleitung,
+  title={Unternehmensleitung in der Aktiengesellschaft und k{\"u}nstliche Intelligenz},
+  author={Ewerz, Simon and Peintner, Andreas},
+  journal={Wirtschaftsrechtliche Bl{\"a}tter: WBL; Zeitschrift f{\"u}r {\"o}sterreichisches und europ{\"a}isches Wirtschaftsrecht},
+  pages={697--710},
+  year={2024}
 }
